# pi-rtos-edge-gateway

./: LICENSE  README.md  TODO.md
meta-pi-rtos-gateway/: .gitignore
meta-pi-rtos-gateway/src/: core2_cloud.c  core3_ota.c  core4_security.c
pi-rtos-gateway/: CMakeLists.txt
pi-rtos-gateway/inc/: gateway.h
pi-rtos-gateway/src/: core1_sensor.c  gateway_main.c
